ALTER TABLE EMPLOYEES DROP CONSTRAINT employees_user_fk;
ALTER TABLE EMPLOYEES DROP CONSTRAINT employees_seller_fk;
ALTER TABLE PRODUCT_CATEGORIES DROP CONSTRAINT product_category_product_fk;
ALTER TABLE PRODUCT_CATEGORIES DROP CONSTRAINT product_category_category_fk;
ALTER TABLE PRODUCT_INGREDIENTS DROP CONSTRAINT product_ingredients_product_fk;
ALTER TABLE PRODUCT_INGREDIENTS DROP CONSTRAINT product_ingredients_ingredient_fk;
ALTER TABLE SELLER_PRODUCTS DROP CONSTRAINT seller_products_seller_fk;
ALTER TABLE SELLER_PRODUCTS DROP CONSTRAINT seller_products_product_fk;
ALTER TABLE ORDERS DROP CONSTRAINT orders_seller_fk;
ALTER TABLE ORDERS DROP CONSTRAINT orders_user_fk;
ALTER TABLE ORDERS DROP CONSTRAINT orders_status_fk;
ALTER TABLE ORDER_PRODUCTS DROP CONSTRAINT order_products_order_fk;
ALTER TABLE ORDER_PRODUCTS DROP CONSTRAINT order_products_product_fk;


DROP TABLE IF EXISTS EMPLOYEES;
DROP TABLE IF EXISTS ORDERS;
DROP TABLE IF EXISTS SELLER_PRODUCTS;
DROP TABLE IF EXISTS PRODUCT_CATEGORIES;
DROP TABLE IF EXISTS PRODUCT_INGREDIENTS;
DROP TABLE IF EXISTS ORDER_PRODUCTS;
DROP TABLE IF EXISTS ORDER_STATUSES;
DROP TABLE IF EXISTS SELLERS;
DROP TABLE IF EXISTS USERS;
DROP TABLE IF EXISTS PRODUCTS;
DROP TABLE IF EXISTS CATEGORIES;
DROP TABLE IF EXISTS INGREDIENTS;


CREATE TABLE IF NOT EXISTS USERS (
    id IDENTITY NOT NULL PRIMARY KEY,
    username VARCHAR2(100) NOT NULL,
    password VARCHAR2(100) NOT NULL,
    email VARCHAR2(100) NOT NULL,
    first_name VARCHAR2(100),
    last_name VARCHAR2(100),
    address VARCHAR2(100) NOT NULL,
    phone VARCHAR2(100) NOT NULL,
    birth_date DATE
);

CREATE TABLE IF NOT EXISTS SELLERS (
    id IDENTITY NOT NULL PRIMARY KEY,
    name VARCHAR2(100) NOT NULL,
    address VARCHAR2(100) NOT NULL,
    phone VARCHAR2(100)
);

CREATE TABLE IF NOT EXISTS EMPLOYEES (
    id IDENTITY NOT NULL PRIMARY KEY,
    user_id BIGINT NOT NULL,
    seller_id BIGINT NOT NULL,
    CONSTRAINT employees_user_fk FOREIGN KEY (user_id) REFERENCES USERS (id),
    CONSTRAINT employees_seller_fk FOREIGN KEY (seller_id) REFERENCES SELLERS (id)
);

CREATE TABLE IF NOT EXISTS PRODUCTS (
    id IDENTITY NOT NULL PRIMARY KEY,
    name VARCHAR2(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS CATEGORIES (
    id IDENTITY NOT NULL PRIMARY KEY,
    name VARCHAR2(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS PRODUCT_CATEGORIES (
    id IDENTITY NOT NULL PRIMARY KEY,
    product_id BIGINT NOT NULL,
    category_id BIGINT NOT NULL,
    CONSTRAINT product_category_product_fk FOREIGN KEY (product_id) REFERENCES PRODUCTS (id),
    CONSTRAINT product_category_category_fk FOREIGN KEY (category_id) REFERENCES CATEGORIES (id)
);

CREATE TABLE IF NOT EXISTS INGREDIENTS (
    id IDENTITY NOT NULL PRIMARY KEY,
    name VARCHAR2(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS PRODUCT_INGREDIENTS (
    id IDENTITY NOT NULL PRIMARY KEY,
    product_id BIGINT NOT NULL,
    ingredient_id BIGINT NOT NULL,
    CONSTRAINT product_ingredients_product_fk FOREIGN KEY (product_id) REFERENCES PRODUCTS (id),
    CONSTRAINT product_ingredients_ingredient_fk FOREIGN KEY (ingredient_id) REFERENCES INGREDIENTS (id)
);

CREATE TABLE IF NOT EXISTS SELLER_PRODUCTS (
    id IDENTITY NOT NULL PRIMARY KEY,
    seller_id BIGINT NOT NULL,
    product_id BIGINT NOT NULL,
    CONSTRAINT seller_products_seller_fk FOREIGN KEY (seller_id) REFERENCES SELLERS (id),
    CONSTRAINT seller_products_product_fk FOREIGN KEY (product_id) REFERENCES PRODUCTS (id)
);

CREATE TABLE IF NOT EXISTS ORDER_STATUSES (
    id IDENTITY NOT NULL PRIMARY KEY,
    name VARCHAR2(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS ORDERS (
    id IDENTITY NOT NULL PRIMARY KEY,
    seller_id BIGINT NOT NULL,
    user_id BIGINT NOT NULL,
    order_status_id BIGINT NOT NULL,
    CONSTRAINT orders_seller_fk FOREIGN KEY (seller_id) REFERENCES SELLERS (id),
    CONSTRAINT orders_user_fk FOREIGN KEY (user_id) REFERENCES USERS (id),
    CONSTRAINT orders_status_fk FOREIGN KEY (order_status_id) REFERENCES ORDER_STATUSES (id)
);

CREATE TABLE IF NOT EXISTS ORDER_PRODUCTS (
    id IDENTITY NOT NULL PRIMARY KEY,
    order_id BIGINT NOT NULL,
    product_id BIGINT NOT NULL,
    CONSTRAINT order_products_order_fk FOREIGN KEY (order_id) REFERENCES ORDERS (id),
    CONSTRAINT order_products_product_fk FOREIGN KEY (product_id) REFERENCES PRODUCTS (id)
);