@startuml

' Zero or One 	|o--
' Exactly One 	||--
' Zero or Many 	}o--
' One or Many 	}|--

' dot = mandatory field

' avoid problems with angled crows feet
' skinparam linetype ortho

class "Users" {
    *id : Long <<generated>>
    --
    *username : String
    *password : String
    *email : String
    first_name : String
    last_name : String
    *address : String
    *phone : String
    birth_date : Date
}

class "Sellers" {
    *id : Long <<generated>>
    --
    *name : String
    *address : String
    phone : String
}

class "Employees" {
    *id : Long <<generated>>
    --
    *user_id : Long <<FK>>
    *seller_id : Long <<FK>>
}

class "Categories" {
    *id : Long <<generated>>
    --
    *name : String
}

class "Product_Categories" {
    *id : Long <<generated>>
    --
    *category_id : Long <<FK>>
    *product_id : Long <<FK>>
}

class "Ingredients" {
    *id : Long <<generated>>
    --
    *name : String
}

class "Products" {
    *id : Long <<generated>>
    --
    *name : String
}

class "Product_Ingredients" {
    *id : Long <<generated>>
    --
    *product_id : Long <<FK>>
    *ingredient_id : Long <<FK>>
}

class "Seller_Products" {
    *id : Long <<generated>>
    --
    *seller_id : Long <<FK>>
    *product_id : Long <<FK>>
}

class "Order_Statuses" {
    *id : Long <<generated>>
    --
    *name : Long
}

class "Orders" {
    *id : Long <<generated>>
    --
    *seller_id : Long <<FK>>
    *user_id : Long <<FK>>
    *order_status_id : Long <<FK>>
}

class "Order_Products" {
    *id : Long <<generated>>
    --
    *order_id : Long <<FK>>
    *product_id : Long <<FK>>
}

Users -- "many" Employees

Sellers -- "many" Employees

Products "many" -- "many" Sellers
Seller_Products -- Sellers
Seller_Products -- Products

Products "many" -- "many" Ingredients
Product_Ingredients -- Ingredients
Product_Ingredients -- Products

Categories "many" -- "many" Products
Categories -- Product_Categories
Products -- Product_Categories

Orders "many" -- "1" Users

Order_Statuses "1" -- "many" Orders

Products "many" -- "many" Orders
Order_Products -- Products
Order_Products -- Orders

Orders "many" -- "1" Sellers


'e01 }|..|| e02
'e01 }|..|| e03

'e02 }|..|| e05

'e02 }|..|| e04
'e03 }|..|| e04

'e02 }|..|| e06
'e03 }|..|| e06


@enduml
